--- a/index.html
+++ b/index.html
@@ -68,13 +68,7 @@
             <section id="screen-2" class="screens" title="carregando o modo de jogo">
                 <header id="cabecalho-carregamento">
                     <h1 id="titulo-nome-load-game">
-                        <span class="letra-animada">m</span>
-                        <span class="letra-animada">i</span>
-                        <span class="letra-animada">n</span>
-                        <span class="letra-animada">l</span>
-                        <span class="letra-animada">i</span>
-                        <span class="letra-animada">c</span>
-                        <span class="letra-animada">k</span>
+                        MinLick
                     </h1>
                     <h3 id="titulo-modo-jogo">Modo Clássico</h3>
                 </header>
